🐛 fix(tabs): added high contrast css for tabs.

--- a/assets/scss/shared-ui/_tabs.scss
+++ b/assets/scss/shared-ui/_tabs.scss
@@ -228,11 +228,11 @@
 				}
 		
 				@media (forced-colors: active) and (prefers-color-scheme: dark), (-ms-high-contrast: white-on-black) {
-					background-color: $nightrider;
-					color: $cloud;
+					background-color: $grey !important;
+					color: $cloud !important;
 					&.active {
-						background-color: $grey;
-						color: map-get($button-background, orange);
+						background-color: $nightrider !important;
+						color: map-get($button-background, orange) !important;
 					}
 				}
 			}
